sourceSets.main{
    java.srcDirs = ['src/']
    resources.srcDirs = ['assets/']
}

sourceCompatibility = 8
targetCompatibility = 8

dependencies{
    implementation "com.github.Anuken.Arc:arc-core:$arcVersion"
    implementation "com.github.Anuken.Mindustry:core:$mindustryVersion"
    implementation "com.squareup:javapoet:$javapoetVersion"
}

tasks.withType(JavaCompile){
    sourceCompatibility = 8
    targetCompatibility = 8
}


//    tasks.withType(JavaCompile){
//        options.incremental = true
//        options.encoding = 'UTF-8'
//        options.compilerArgs += '-Xlint:deprecation'
//        sourceCompatibility = 8
//        targetCompatibility = 8
//
//        def currentModName = rootProject.ext.modName
//        def currentClassPrefix = rootProject.ext.classPrefix
//
//        options.compilerArgs += [
//                "-AmodName=${currentModName}",
//                "-AclassPrefix=${currentClassPrefix}"
//        ]
//
//        options.fork = true
//        options.forkOptions.jvmArgs += [
//                '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
//                '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
//                '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
//                '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
//                '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
//                '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
//                '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
//                '--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED'
//        ]
//    }
